# ComfyUI_API_Manager

./: README.md  __init__.py  api_request.py  api_routes.py  comfyui_client.py  comfyui_nodes.py  image_post_node.py  job_tracker.py  json_array_iterator.py  mcp_server.py  pyproject.toml  requirements.txt  settings_manager.py  settings_nodes.py  text_prompt_combiner_node.py  workflow_manager.py
web/js/: api_manager_settings.js
